Bug 312433 - Extension Based Subalbums are not created
Summary: Extension Based Subalbums are not created
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Import-Albums (other bugs)
Version First Reported In: 3.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-31 14:53 UTC by Andi Clemens
Modified: 2017-08-16 09:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2012-12-31 14:53:27 UTC
When I select "extension based subalbums" in the import dialog, the folders are not created.

Reproducible: Always

Steps to Reproduce:
1. check "extension based subalbums" in the subalbums section of the import dialog
2. Import images
Actual Results:  
Not doing anything, debugging the code I can see that no image name is present and therefore no extension can be extracted.

Expected Results:  
The folder(s) should be created

This bug could be related to #307253
Comment 1 Andi Clemens 2012-12-31 14:53:45 UTC
I will look into the problem now
Comment 2 Andi Clemens 2012-12-31 14:55:38 UTC
I have not tested this with real camera, but with the "Import folder" method (CTRL+I) which should also work...
Comment 3 Andi Clemens 2012-12-31 15:11:41 UTC
Git commit f50ce9dedeff9c4cf44c31e46b5a76499a054e40 by Andi Clemens.
Committed on 31/12/2012 at 16:10.
Pushed by aclemens into branch 'master'.

Make sure that a name is provided, if no downloadName is available (bug #307253?), use the file name instead

M  +1    -1    utilities/importui/main/importui.cpp

http://commits.kde.org/digikam/f50ce9dedeff9c4cf44c31e46b5a76499a054e40
Comment 4 Andi Clemens 2012-12-31 15:11:41 UTC
Git commit d2d49c0971b337c5e7c7bea1e101b82966242a24 by Andi Clemens.
Committed on 31/12/2012 at 16:10.
Pushed by aclemens into branch 'master'.

update

M  +2    -1    NEWS

http://commits.kde.org/digikam/d2d49c0971b337c5e7c7bea1e101b82966242a24