Make sure that a name is provided, if no downloadName is available (bug #307253?), use the file name instead

BUG: 312433